<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.addTaskBottomSheet.view.AddTaskBottomSheetFragment">


    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/create_new_task"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/task_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text" />

    <EditText
        android:id="@+id/task_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_background_eight"
        android:backgroundTint="@color/light_white"
        app:cursorColor="@color/primary_color"
        android:drawableStart="@drawable/ic_title"
        android:drawablePadding="8dp"
        android:hint="@string/enter_task_name"
        android:inputType="text"
        android:textColor="@color/black"
        android:padding="14dp"
        android:textDirection="locale"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/task_name"
        app:layout_constraintTop_toBottomOf="@id/task_name" />

    <TextView
        android:id="@+id/task_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/description"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_name_edit_text" />

    <EditText
        android:id="@+id/task_description_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="100dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_background_eight"
        android:backgroundTint="@color/light_white"
        app:cursorColor="@color/primary_color"
        android:gravity="start"
        android:hint="@string/enter_description"
        android:inputType="text"
        android:textColor="@color/black"
        android:padding="14dp"
        android:textDirection="locale"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/task_name"
        app:layout_constraintTop_toBottomOf="@id/task_description" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/confirm"
        android:gravity="center"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary_color"
        android:background="@drawable/rounded_background_eight"
        app:layout_constraintTop_toBottomOf="@id/task_description_edit_text"
        app:layout_constraintStart_toStartOf="@id/task_name_edit_text"
        app:layout_constraintEnd_toEndOf="@id/task_name_edit_text"
        />


</androidx.constraintlayout.widget.ConstraintLayout>