<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.fragments.homeScreen.view.HomeScreenFragment">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/home_page"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tasksSummaryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/rounded_background_sixteen"
        android:backgroundTint="@color/primary_color"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/title_text">

        <TextView
            android:id="@+id/tasks_summary_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/today_s_progress_summary"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/number_of_tasks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/tasks_summary_text"
            app:layout_constraintStart_toStartOf="@id/tasks_summary_text"
            app:layout_constraintTop_toBottomOf="@id/tasks_summary_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/empty_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/empty_tasks"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/today_tasks_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/today_s_task"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/tasksSummaryLayout"
        app:layout_constraintTop_toBottomOf="@id/tasksSummaryLayout" />

    <TextView
        android:id="@+id/delete_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="4dp"
        android:text="@string/delete_all"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/today_tasks_text"
        app:layout_constraintEnd_toEndOf="@id/tasksSummaryLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasks_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:itemCount="0"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tasksSummaryLayout"
        app:layout_constraintStart_toStartOf="@id/tasksSummaryLayout"
        app:layout_constraintTop_toBottomOf="@id/today_tasks_text"
        tools:listitem="@layout/tasks_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/primary_color"
        android:src="@drawable/ic_add"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>